--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -2,15 +2,17 @@ name: build
 on:
   pull_request
 jobs:
-  checkov-job:
+  security_scan:
     runs-on: ubuntu-latest
-    name: checkov-action
+    name: prisma-cloud-action
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
 
-      - name: Run Checkov action
-        id: checkov
+      - name: Run Prisma Cloud 
+        id: prisma-cloud
         uses: bridgecrewio/checkov-action@master
+        env:
+          PRISMA_API_URL: https://api.prismacloud.io
         with:
-          directory: terraform/
+          api-key: ${{ secrets.BC_API_KEY }}
